[package]
name        = "deshredder"
version     = "0.1.0"
edition     = "2024"
description = "Pure Solana shred assembler library — zero I/O, zero async deps"
license     = "MIT"

[lib]
name = "deshredder"
path = "src/lib.rs"

[dependencies]
# agave-unstable-api makes solana_ledger::shred pub (instead of pub(crate)).
# Same feature used by solana-gossip, so colibri's full dep tree shares one rocksdb.
solana-ledger = { git = "https://github.com/anza-xyz/agave.git", tag = "v3.1.5", features = ["agave-unstable-api"] }
solana-entry  = { git = "https://github.com/anza-xyz/agave.git", tag = "v3.1.5" }
bincode       = "1"

# Pin leaf crates to exact agave v3.1.5 workspace versions to prevent Cargo
# from resolving to newer crates.io releases that have a broken five8 dep chain.
solana-keypair   = "=3.0.1"
solana-signature = { version = "=3.1.0", default-features = false }

[dev-dependencies]
criterion    = { version = "0.5", features = ["html_reports"] }
solana-hash  = "=3.1.0"
